@@ -2,3 +2,4 @@ Apocalypse <APOCAL@cpan.org> <apocalypse@users.noreply.github.com>
 Apocalypse <APOCAL@cpan.org> <perl@0ne.us>
 Apocalypse <APOCAL@cpan.org> <apoc@blackhole.(none)>
 Apocalypse <APOCAL@cpan.org> <apoc@satellite.(none)>
+Kent Fredric <kentnl@cpan.org> <kentfredric@gmail.com>
