@@ -1,6 +1,7 @@
 Revision history for Pod::Weaver::Section::SeeAlso
 
 {{$NEXT}}
+  Remove dependency on Moose::Autobox ( thanks KENTNL, GH #3 )
 
 1.003	2014-10-25 22:12:40 UTC
 
